// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppTemplate > calls the mobile menu 1`] = `
<div>
  <div
    class="page-host"
  >
    <div
      class="close drawer-container"
      id="sidebar"
      role="presentation"
    >
      <div
        class="drawer"
        style="background-color: rgb(80, 80, 80);"
      >
        <div
          class="nav-list"
        >
          <a
            href="tel:5404447337"
            style="display: block; color: rgb(255, 255, 255); text-decoration: none; background-color: rgb(136, 18, 4); height: 72px; padding-top: 4px; margin-top: -1px;"
          >
            <h4
              class="material-header-h4-call"
              style="text-align: center; margin-right: 280px; padding-bottom: 0px; width: 200px;"
            >
              Call
              <br />
              540-444-7337
            </h4>
          </a>
          <div
            class="menu-item"
            style="background-color: black; margin: 8px;"
          >
            <p
              style="color: rgb(255, 255, 255); margin-bottom: 2px;"
            >
              <a
                class="menu-hover"
                href="https://goo.gl/maps/5G47ib81DGj7o2gk9"
                style="color: rgb(69, 201, 255); text-decoration: none;"
              >
                <span>
                  1601 Apperson Drive
                </span>
              </a>
              <br />
              Salem, VA 24153
            </p>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/auto-maintenance"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                Auto Maintenance
              </span>
            </a>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/general-auto-repair"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                General Auto Repair
              </span>
            </a>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/major-auto-repair"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                Major Auto Repair
              </span>
            </a>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/contact"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                Contact
              </span>
            </a>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                Home
              </span>
            </a>
          </div>
          <div
            class="menu-item version-label"
            style="position: absolute; bottom: 15px; left: 0px; right: 0px; justify-content: center; opacity: 0.6; pointer-events: none;"
          >
            <span
              id="app-version"
              style="font-size: 13px; color: rgb(192, 192, 192); font-family: Habibi, ChivoBlack, Arial, sans-serif;"
            >
              v
              3.2.4
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="main-panel"
    >
      <span
        aria-label="Toggle menu"
        id="mobilemenutoggle"
        role="button"
        tabindex="0"
      >
        <i
          class="fas fa-bars fa-2x"
        />
      </span>
      <div
        class="mainPanel"
      >
        <div
          class="swipe-area"
        />
        <div
          class="material-header"
          id="header"
        >
          <div
            class="headercontent"
          />
          <div>
            <div
              style="margin-left: 5px; margin-top: 1px;"
            >
              <img
                alt="headerlogo"
                class="style-scope iron-image"
                id="ig"
                src="https://dl.dropboxusercontent.com/s/qg69q7f5so4aqsb/appAutoLogo.png?dl=0"
                width="272px"
              />
            </div>
          </div>
        </div>
        <div
          class="content-block"
          id="contentBlock"
          style="width: auto;"
        >
          <div
            class="footer"
            id="wjfooter"
            style="margin-top: 20px; padding-top: 20px; padding-bottom: 20px; bottom: 0px;"
          >
            <div
              class="footerLinks"
              style="text-align: center; padding: 6px;"
            >
              <a
                href="https://www.yellowpages.com/salem-va/mip/apperson-automotive-482421530"
              >
                <img
                  alt="yellowpages"
                  src="https://insightmg.com/wp-content/uploads/2015/12/YP_Insight-Marketing-Group_Marketing-for-Medical-Practices.png"
                  style="margin-bottom: 15px; vertical-align: middle;"
                  width="40px"
                />
              </a>
              <a
                href="https://www.yelp.com/biz/apperson-automotive-salem"
                style="margin-left: 30px;"
              >
                <img
                  alt="yelp"
                  src="https://dl.dropboxusercontent.com/s/pb5qn5wyps6k56t/yelp-logo-icon-7.jpg?dl=0"
                  style="margin-bottom: 15px; vertical-align: middle;"
                  width="40px"
                />
              </a>
            </div>
            <div
              style="text-align: center; padding: 6px;"
            >
              <span
                class="nohover"
              >
                Powered by  
              </span>
              <a
                class="wjllc"
                href="https://www.web-jam.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Web Jam LLC
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppTemplate > renders the component 1`] = `
<div>
  <div
    class="page-host"
  >
    <div
      class="close drawer-container"
      id="sidebar"
      role="presentation"
    >
      <div
        class="drawer"
        style="background-color: rgb(80, 80, 80);"
      >
        <div
          class="material-header x-scope paper-material-0 drawer"
          style="background-color: rgb(136, 18, 4);"
        >
          <a
            href="tel:5404447337"
            style="display: block; color: rgb(255, 255, 255); text-decoration: none; background-color: rgb(136, 18, 4); height: 72px; padding-top: 4px; margin-top: -1px;"
          >
            <h4
              class="material-header-h4-call"
              style="text-align: center; margin-right: 280px; padding-bottom: 0px; width: 200px;"
            >
              Call
              <br />
              540-444-7337
            </h4>
          </a>
        </div>
        <div
          class="nav-list"
        >
          <div
            class="menu-item"
            style="background-color: black; margin: 8px;"
          >
            <p
              style="color: rgb(255, 255, 255); margin-bottom: 2px;"
            >
              <a
                class="menu-hover"
                href="https://goo.gl/maps/5G47ib81DGj7o2gk9"
                style="color: rgb(69, 201, 255); text-decoration: none;"
              >
                <span>
                  1601 Apperson Drive
                </span>
              </a>
              <br />
              Salem, VA 24153
            </p>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/auto-maintenance"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                Auto Maintenance
              </span>
            </a>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/general-auto-repair"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                General Auto Repair
              </span>
            </a>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/major-auto-repair"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                Major Auto Repair
              </span>
            </a>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/contact"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                Contact
              </span>
            </a>
          </div>
          <div
            class="menu-item"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/"
            >
              <i
                class=""
              />
               
              <span
                class="nav-item"
              >
                Home
              </span>
            </a>
          </div>
          <div
            class="menu-item version-label"
            style="position: absolute; bottom: 15px; left: 0px; right: 0px; justify-content: center; opacity: 0.6; pointer-events: none;"
          >
            <span
              id="app-version"
              style="font-size: 13px; color: rgb(192, 192, 192); font-family: Habibi, ChivoBlack, Arial, sans-serif;"
            >
              v
              3.2.4
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="main-panel"
    >
      <span
        aria-label="Toggle menu"
        id="mobilemenutoggle"
        role="button"
        tabindex="0"
      >
        <i
          class="fas fa-bars fa-2x"
        />
      </span>
      <div
        class="mainPanel"
      >
        <div
          class="swipe-area"
        />
        <div
          class="material-header"
          id="header"
        >
          <div
            class="headercontent"
          />
          <div>
            <div
              style="margin-left: 5px; margin-top: 1px;"
            >
              <img
                alt="headerlogo"
                class="style-scope iron-image"
                id="ig"
                src="https://dl.dropboxusercontent.com/s/qg69q7f5so4aqsb/appAutoLogo.png?dl=0"
                width="272px"
              />
            </div>
          </div>
        </div>
        <div
          class="content-block"
          id="contentBlock"
          style="width: auto;"
        >
          <div
            class="footer"
            id="wjfooter"
            style="margin-top: 20px; padding-top: 20px; padding-bottom: 20px; bottom: 0px;"
          >
            <div
              class="footerLinks"
              style="text-align: center; padding: 6px;"
            >
              <a
                href="https://www.yellowpages.com/salem-va/mip/apperson-automotive-482421530"
              >
                <img
                  alt="yellowpages"
                  src="https://insightmg.com/wp-content/uploads/2015/12/YP_Insight-Marketing-Group_Marketing-for-Medical-Practices.png"
                  style="margin-bottom: 15px; vertical-align: middle;"
                  width="40px"
                />
              </a>
              <a
                href="https://www.yelp.com/biz/apperson-automotive-salem"
                style="margin-left: 30px;"
              >
                <img
                  alt="yelp"
                  src="https://dl.dropboxusercontent.com/s/pb5qn5wyps6k56t/yelp-logo-icon-7.jpg?dl=0"
                  style="margin-bottom: 15px; vertical-align: middle;"
                  width="40px"
                />
              </a>
            </div>
            <div
              style="text-align: center; padding: 6px;"
            >
              <span
                class="nohover"
              >
                Powered by  
              </span>
              <a
                class="wjllc"
                href="https://www.web-jam.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Web Jam LLC
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
